--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "prop-types": "^15.7.2",
     "react": "16.8.6",
     "react-native": "0.60.5",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-reanimated": "^1.2.0",
     "react-navigation": "^4.0.5",
     "react-navigation-stack": "^1.7.3",
-    "reactotron-react-native": "^3.6.5"
+    "reactotron-react-native": "^3.6.5",
+    "styled-components": "^4.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.6.0",
